--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}/dist/app.js",
+            "program": "${workspaceFolder}/dist/main.js",
             "preLaunchTask": "build"
         }
     ]
