--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,10 +13,13 @@
                 "lib/Counter/Counter.cpp",
                 "lib/TimerUtils/TimerUtils.cpp",
                 "lib/Clock/Clock.cpp",
+                "lib/Clock/ClockListener.h",
                 "lib/Clock/ClockObserver.cpp",
+                "lib/Clock/Timer.cpp",
                 "lib/arduino/Arduino.cpp",
                 "lib/Devices/GPIO/GPIO.cpp",
                 "lib/Devices/OutputDevice/OutputDevice.cpp",
+                "lib/Devices/OutputDevice/DualOutputDevice.cpp",
                 "lib/Devices/Door/Door.cpp",
                 "-std=c++11"
             ],
